--- a/Analysis_QRS.Rmd
+++ b/Analysis_QRS.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Chloroquine concentration-fatality curve"
+title: "Chloroquine concentration-dependent QRS widening"
 author: "James Watson"
-date: "4/20/2020"
+date: "6/12/2020"
 output:
   html_document:
     df_print: paged
@@ -20,10 +20,18 @@ library(gtools)
 library(rstan)
 library(RColorBrewer)
 RUN_MODELS=T
+```
 
+Show R version and package versions
+```{r}
+sessionInfo()
+```
+
+Important parameters for the analysis/visualisation
+```{r}
 #****** Parameters for the analysis *******
-plasma_to_whole_blood_ratio = 4 # conversion for the healthy volnteer data
-Weight_interested = 70 # displays results for chosen weight - has to be multiple of 5 between 40 and 90!
+plasma_to_whole_blood_ratio = 4 # conversion from plasma to whole blood for the healthy volunteer concentration data
+Weight_interested = 70 # displays results for chosen weight - has to be multiple of 5 and between 40 and 90!
 ```
 
 ## Data from self-poisoning cohorts and healthy volunteers
@@ -34,15 +42,17 @@ Data from Riou were extracted from published graph (see Figure 3 in NEJM Riou et
 pooled_data = read.csv('Pooled_QRS_data.csv')
 
 # do the conversion from plasma to whole blood for the healthy volunteers
+# study = 1 is self-poisoning
+# study = 2 is healthy volunteers
 pooled_data$CQ_uMol[pooled_data$study==2] =
   pooled_data$CQ_uMol[pooled_data$study==2]*plasma_to_whole_blood_ratio
 ```
 
 ```{r Sfig_raw_QRS_data, fig.width=10, fig.height=9}
+# some nice colors for the plots
 col_study = RColorBrewer::brewer.pal(n = 3, name = 'Set1')[c(1,3)]
 
 ind_clem = pooled_data$study==1
-
 # jitter the self-poisoning QRS data
 ys = rep(0, nrow(pooled_data)); ys[ind_clem] = rnorm(sum(ind_clem),mean = 0,sd = 1)
 
@@ -53,7 +63,7 @@ plot(log10(pooled_data$CQ_uMol), ys+pooled_data$QRS, xaxt='n',
      pch = pooled_data$died+1,main='Raw QRS data (no bias or outlier adjustement)')
 axis(1, at = seq(-1, 2, by = 0.5), labels = round(10^seq(-1, 2, by = 0.5),1))
 legend('topleft',  pch = c(1,1,1,2),
-       legend = c('Healthy volunteers (600 mg base)','Clemessy',
+       legend = c('Healthy volunteers (620 mg base)','Clemessy',
                   'Survivors','Fatal cases'),
        col = c(col_study[c(2,1)],'black','black'), inset = 0.03)
 abline(h=150, v=1, lty=2)
@@ -85,12 +95,18 @@ data {
   
   // prior parameters
   real ed50_mu;
+  real ed50_sd;
   real max_effect_prior_mu;
   real max_effect_prior_sd;
   real min_effect_prior_mu;
   real min_effect_prior_sd;
   real log_slope_prior_mu;
   real log_slope_prior_sd;
+  real bias_term_prior_mu;
+  real bias_term_prior_sd;
+  real mu_normal_mean;
+  real mu_normal_sd;
+  real sigma_i_prior;
 }
 
 parameters {
@@ -108,15 +124,15 @@ parameters {
 
 model {
   // Prior
-  bias_term ~ normal(-20,10);
+  bias_term ~ normal(bias_term_prior_mu,bias_term_prior_sd);
   log_slope ~ normal(log_slope_prior_mu, log_slope_prior_sd);
-  ed50 ~ normal(ed50_mu, 1);
+  ed50 ~ normal(ed50_mu, ed50_sd);
   max_effect ~ normal(max_effect_prior_mu,max_effect_prior_sd);
   min_effect ~ normal(min_effect_prior_mu,min_effect_prior_sd);
   mu_i ~ normal(0,sigma_i);
-  mu_normal ~ normal(5,1);
+  mu_normal ~ normal(mu_normal_mean,mu_normal_sd);
   
-  sigma_i ~ exponential(0.2); // prior standard deviation is +/- 5 msec of IIV
+  sigma_i ~ exponential(sigma_i_prior); // prior standard deviation is +/- 5 msec of IIV
   sigma1 ~ normal(25,5);
   sigma2 ~ normal(2,1);
   
@@ -140,18 +156,24 @@ if(RUN_MODELS) conc_QRS_mod = stan_model(model_code = Conc_QRS_Emax)
 
 ## Fit main model to prospective data
 
-```{r, include=FALSE}
+```{r runstan}
 N_iter = 10^5
 N_thin = 100
 N_chains = 8
-#options(mc.cores = N_chains)
+#options(mc.cores = N_chains) - broken in current R version!
 prior_params = list(max_effect_prior_mu = 180,
                     max_effect_prior_sd = 10, 
                     min_effect_prior_mu = 90,
                     min_effect_prior_sd = 4,
-                    log_slope_prior_mu = 0,
-                    log_slope_prior_sd = 5,
-                    ed50_mu = 1)
+                    log_slope_prior_mu = 1,
+                    log_slope_prior_sd = 1,
+                    ed50_mu = 1.3, 
+                    ed50_sd = 1,
+                    bias_term_prior_mu = -20,
+                    bias_term_prior_sd = 5,
+                    mu_normal_mean = 3,
+                    mu_normal_sd = 1,
+                    sigma_i_prior = 0.2)
 
 # QRS values above 200 are not physiologically possible so we truncate at 200
 pooled_data$QRS[pooled_data$QRS > 200] = 200
@@ -226,7 +248,7 @@ plot(x = log10(pooled_data$CQ_uMol), panel.first = grid(),
      pch = pooled_data$died+1, xlim = c(-1,2))
 axis(1, at = seq(-1, 2, by = 0.5), labels = round(10^seq(-1, 2, by = 0.5),1))
 legend('topleft',  pch = c(1,1,1,2),
-       legend = c('Healthy volunteers (600 mg base)',
+       legend = c('Healthy volunteers (620 mg base)',
                   'Self-poisoning',
                   'Survivors','Fatal cases'),
        col = c(col_study[c(2,1)],'black','black'), inset = 0.03)
@@ -272,7 +294,7 @@ for(i in 1:length(thetas$log_slope)){
           min_effect = thetas$min_effect[i], max_effect = thetas$max_effect[i]) -
     (thetas$min_effect[i] - thetas$mu_normal[i])
 }
-hist(vals)
+hist(vals, xlab='Estimated mean QRS widening at 3 umol/L (msec)',main='', yaxt='n',ylab='')
 
 writeLines(sprintf('At 3umol/L the median increase in QRS is %s (95%% CI is %s - %s)',
                    round(median(vals),1), round(quantile(vals,0.025),1), round(quantile(vals,0.975),1)))
@@ -280,38 +302,55 @@ writeLines(sprintf('At 3umol/L the median increase in QRS is %s (95%% CI is %s -
 
 
 ```{r priors_vs_posteriors_QRS}
-par(mfrow=c(3,2),las=1, cex.lab=1.5)
+par(mfrow=c(3,3),las=1, cex.lab=1.5)
 hist(thetas$max_effect, freq = F,breaks = 50,main = '', 
-     xlab = 'Mean upper QRS value', col = 'grey',ylab='', yaxt='n')
+     xlab = 'Emax QRS (msec)', col = 'grey',ylab='', yaxt='n')
 xs = seq(min(thetas$max_effect), max(thetas$max_effect), length.out=500)
 lines(xs, dnorm(xs, mean = prior_params$max_effect_prior_mu, 
                 sd = prior_params$max_effect_prior_sd), lwd=3, col='red')
 
 hist(thetas$min_effect, freq = F,breaks = 50, main = '', 
-     xlab = 'Mean lower QRS value', col = 'grey',ylab='', yaxt='n')
+     xlab = 'Emin QRS (msec)', col = 'grey',ylab='', yaxt='n')
 xs = seq(min(thetas$min_effect), max(thetas$min_effect), length.out=500)
 lines(xs, dnorm(xs, mean = prior_params$min_effect_prior_mu, 
                 sd = prior_params$min_effect_prior_sd), lwd=3, col='red')
 
-hist(thetas$bias_term,freq=F,breaks = 50,main = '', xlab = 'Bias term (Clemessy series)', 
+hist(thetas$bias_term,freq=F,breaks = 50,main = '', xlab = 'Bias term (Clemessy, msec)', 
      col = 'grey',ylab='', yaxt='n')
 xs = seq(min(thetas$bias_term), max(thetas$bias_term), length.out=500)
 lines(xs, dnorm(xs, mean = -20, sd = 10), lwd=3, col='red')
 
-hist(thetas$ed50, freq=F,breaks = 50,main = '', xlab = 'ED_50', col = 'grey',
+hist(thetas$ed50, freq=F,breaks = 50,main = '', xlab = 'ED_50 (log_10 concentration)', col = 'grey',
      ylab='', yaxt='n')
 xs=seq(0,2,length.out = 2000); 
 lines(xs, dnorm(xs,mean = prior_params$ed50_mu,sd = 1),col='red',lwd=3)
 
-hist(thetas$sigma1, freq=F,breaks = 50,main = '', xlab = 'Sigma 1', col = 'grey',
-     ylab='', yaxt='n')
+hist(thetas$log_slope, freq=F,breaks = 50,main = '', xlab = 'Slope coefficient (on log scale)', 
+     col = 'grey',ylab='', yaxt='n')
+xs=seq(0,2,length.out = 2000); 
+lines(xs, dnorm(xs,mean = prior_params$log_slope_prior_mu,sd = prior_params$log_slope_prior_sd),
+      col='red',lwd=3)
+
+
+hist(thetas$mu_normal, freq=F,breaks = 50,main = '', 
+     xlab = 'Decrease for steady state QRS (msec)', col = 'grey', ylab='', yaxt='n')
+xs=seq(0,10,length.out = 500); 
+lines(xs, dnorm(xs,mean = 5,sd = 1),col='red',lwd=3)
+
+hist(thetas$sigma1, freq=F,breaks = 50,main = '', xlab = 'Sigma self-poisoning', 
+     col = 'grey',ylab='', yaxt='n')
 xs=seq(0,50,length.out = 500); 
 lines(xs, dnorm(xs,mean=25, sd=5),col='red',lwd=3)
 
-hist(thetas$sigma2, freq=F,breaks = 50,main = '', xlab = 'Sigma 2', col = 'grey',
-     ylab='', yaxt='n')
-lines(xs, dnorm(xs,mean=7, sd=3),col='red',lwd=3)
+hist(thetas$sigma2, freq=F,breaks = 50,main = '', xlab = 'Sigma healthy volunteers', 
+     col = 'grey',  ylab='', yaxt='n')
+lines(xs, dnorm(xs,mean=2, sd=1),col='red',lwd=3)
 
+
+hist(thetas$sigma_i, freq=F,breaks = 50,main = '', 
+     xlab = 'Inter-individual sigma (healthy volunteers)', col = 'grey',
+     ylab='', yaxt='n')
+lines(xs, dexp(xs,rate = 0.2),col='red',lwd=3)
 ```
 
 
