--- a/Analysis_QRS.Rmd
+++ b/Analysis_QRS.Rmd
@@ -304,7 +304,8 @@ for(i in 1:length(thetas$log_slope)){
           min_effect = thetas$min_effect[i], max_effect = thetas$max_effect[i]) -
     (thetas$min_effect[i] - thetas$mu_normal[i])
 }
-hist(vals, xlab='Estimated mean QRS widening at 3 umol/L (msec)',main='', yaxt='n',ylab='')
+hist(vals, xlab='Estimated mean QRS widening at 3 umol/L (msec)',main='', yaxt='n',
+     breaks = 50, ylab='',border = NA)
 
 writeLines(sprintf('At 3umol/L the median increase in QRS is %s (95%% CI is %s - %s)',
                    round(median(vals),1), round(quantile(vals,0.025),1), round(quantile(vals,0.975),1)))
@@ -313,55 +314,55 @@ writeLines(sprintf('At 3umol/L the median increase in QRS is %s (95%% CI is %s -
 
 ```{r priors_vs_posteriors_QRS}
 par(mfrow=c(3,4),las=1, cex.lab=1)
-hist(thetas$max_effect, freq = F,breaks = 50,main = '', 
+hist(thetas$max_effect, freq = F,breaks = 50,main = '', border = NA,
      xlab = 'Emax QRS (msec)', col = 'grey',ylab='', yaxt='n')
 xs = seq(min(thetas$max_effect), max(thetas$max_effect), length.out=500)
 lines(xs, dnorm(xs, mean = prior_params$max_effect_prior_mu, 
                 sd = prior_params$max_effect_prior_sd), lwd=3, col='red')
 
-hist(thetas$min_effect, freq = F,breaks = 50, main = '', 
+hist(thetas$min_effect, freq = F,breaks = 50, main = '', border = NA,
      xlab = 'Emin QRS (msec)', col = 'grey',ylab='', yaxt='n')
 xs = seq(min(thetas$min_effect), max(thetas$min_effect), length.out=500)
 lines(xs, dnorm(xs, mean = prior_params$min_effect_prior_mu, 
                 sd = prior_params$min_effect_prior_sd), lwd=3, col='red')
 
 hist(thetas$bias_term,freq=F,breaks = 50,main = '', xlab = 'Bias term (Clemessy, msec)', 
-     col = 'grey',ylab='', yaxt='n')
+     col = 'grey',ylab='', yaxt='n',border = NA)
 xs = seq(min(thetas$bias_term), max(thetas$bias_term), length.out=500)
 lines(xs, dnorm(xs, mean = prior_params$bias_term_prior_mu, sd = prior_params$bias_term_prior_sd), lwd=3, col='red')
 
 hist(thetas$ed50, freq=F,breaks = 50,main = '', xlab = 'ED_50 (log_10 concentration)', col = 'grey',
-     ylab='', yaxt='n')
+     ylab='', yaxt='n',border = NA)
 xs=seq(0,2,length.out = 2000); 
 lines(xs, dnorm(xs,mean = prior_params$ed50_mu,sd = prior_params$ed50_sd),col='red',lwd=3)
 
 hist(thetas$log_slope, freq=F,breaks = 50,main = '', xlab = 'Slope coefficient (on log scale)', 
-     col = 'grey',ylab='', yaxt='n')
+     col = 'grey',ylab='', yaxt='n',border = NA)
 xs=seq(0,2,length.out = 2000); 
 lines(xs, dnorm(xs,mean = prior_params$log_slope_prior_mu,sd = prior_params$log_slope_prior_sd),
       col='red',lwd=3)
 
 
-hist(thetas$mu_normal, freq=F,breaks = 50,main = '', 
+hist(thetas$mu_normal, freq=F,breaks = 50,main = '', border = NA,
      xlab = 'Decrease for steady state QRS (msec)', col = 'grey', ylab='', yaxt='n')
 xs=seq(0,10,length.out = 500); 
 lines(xs, dnorm(xs,mean = prior_params$mu_normal_mean,sd = prior_params$mu_normal_sd),col='red',lwd=3)
 
 hist(thetas$sigma1, freq=F,breaks = 50,main = '', xlab = 'Sigma Clemessy', 
-     col = 'grey',ylab='', yaxt='n')
+     col = 'grey',ylab='', yaxt='n',border = NA)
 xs=seq(0,50,length.out = 500); 
 lines(xs, dnorm(xs,mean = 25, sd = 5),col='red',lwd=3)
 
 hist(thetas$sigma2, freq=F,breaks = 50,main = '', xlab = 'Sigma Megarbane', 
-     col = 'grey',  ylab='', yaxt='n')
+     col = 'grey',  ylab='', yaxt='n',border = NA)
 lines(xs, dnorm(xs,mean = 2, sd = 1),col='red',lwd=3)
 
 hist(thetas$sigma3, freq=F,breaks = 50,main = '', xlab = 'Sigma healthy volunteers', 
-     col = 'grey',  ylab='', yaxt='n')
+     col = 'grey',  ylab='', yaxt='n',border = NA)
 lines(xs, dnorm(xs,mean = 2, sd = 1),col='red',lwd=3)
 
 
-hist(thetas$sigma_i, freq=F,breaks = 50,main = '', 
+hist(thetas$sigma_i, freq=F,breaks = 50,main = '', border = NA,
      xlab = 'Inter-individual sigma (healthy volunteers)', col = 'grey',
      ylab='', yaxt='n')
 lines(xs, dexp(xs,rate = prior_params$sigma_i_prior),col='red',lwd=3)
